--- a/MedicineGuru/app/src/main/res/layout/activity_main.xml
+++ b/MedicineGuru/app/src/main/res/layout/activity_main.xml
@@ -7,11 +7,17 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
-
     <include
         layout="@layout/app_bar_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
+    <FrameLayout
+        android:id="@+id/pm_fragment"
+        android:paddingTop="50dp"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/nav_header_height"
+        />
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
@@ -21,5 +27,6 @@
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_main"
         app:menu="@menu/activity_main_drawer" />
+
 
 </android.support.v4.widget.DrawerLayout>
