--- a/MedicineGuru/app/src/main/res/layout/product_view.xml
+++ b/MedicineGuru/app/src/main/res/layout/product_view.xml
@@ -8,11 +8,11 @@
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="200dp"
+        android:layout_height="150dp"
+        android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:contentDescription="Property Image"
-        />
+        android:contentDescription="Property Image" />
 
     <LinearLayout
         android:id="@+id/infoSection"
@@ -42,12 +42,15 @@
         android:id="@+id/pricingSection"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/infoSection"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_below="@+id/image"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="21dp">
 
         <TextView
             android:id="@+id/price"
             android:layout_width="match_parent"
+
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:text="Price" />
