--- a/MedicineGuru/app/src/main/res/menu/activity_main_drawer.xml
+++ b/MedicineGuru/app/src/main/res/menu/activity_main_drawer.xml
@@ -14,7 +14,7 @@
         <item
             android:id="@+id/nav_gallery"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:title="Products" />
         <item
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_menu_slideshow"
