--- a/MedicineGuru/app/src/main/res/values/dimens.xml
+++ b/MedicineGuru/app/src/main/res/values/dimens.xml
@@ -18,6 +18,7 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
     <dimen name="nav_header_height">160dp</dimen>
+    <dimen name="nav_body_dimen">65dp</dimen>
 
 
 </resources>
