--- a/MedicineGuru/app/src/main/res/values/styles.xml
+++ b/MedicineGuru/app/src/main/res/values/styles.xml
@@ -21,5 +21,20 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="AppTheme.navText" parent="@android:style/TextAppearance" >
+        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">#F44336</item>
+        <item name="android:shadowColor">#E57373</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:typeface">sans</item>
+    </style>
+
+    <style name="AppTheme.navSubText" parent="@android:style/TextAppearance" >
+        <item name="android:textSize">10sp</item>
+        <item name="android:textColor">#E57373</item>
+        <item name="android:textStyle">italic</item>
+        <item name="android:typeface">serif</item>
+    </style>
+
 </resources>
 
