--- a/MedicineGuru/app/src/main/res/drawable/side_nav_bar.xml
+++ b/MedicineGuru/app/src/main/res/drawable/side_nav_bar.xml
@@ -2,8 +2,8 @@
     android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:centerColor="#4CAF50"
-        android:endColor="#2E7D32"
-        android:startColor="#81C784"
+        android:centerColor="#09d1d4"
+        android:endColor="#06929c"
+        android:startColor="#20d7ce"
         android:type="linear" />
 </shape>
