--- a/MedicineGuru/app/src/main/res/layout/product_layout.xml
+++ b/MedicineGuru/app/src/main/res/layout/product_layout.xml
@@ -10,7 +10,8 @@
         android:id="@+id/image"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginRight="10dp"
+        android:layout_above="@+id/pricingSection"
+        android:layout_alignParentStart="true"
         android:contentDescription="Property Image" />
 
     <LinearLayout
