--- a/MedicineGuru/app/src/main/res/layout/nav_header_main.xml
+++ b/MedicineGuru/app/src/main/res/layout/nav_header_main.xml
@@ -16,7 +16,8 @@
         android:id="@+id/imageView"
         android:layout_width="@dimen/nav_body_dimen"
         android:layout_height="@dimen/nav_body_dimen"
-        app:srcCompat="@drawable/nav" />
+        android:src="@drawable/nav"
+        android:adjustViewBounds="true"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
