--- a/MedicineGuru/app/src/main/res/values/dimens.xml
+++ b/MedicineGuru/app/src/main/res/values/dimens.xml
@@ -19,6 +19,7 @@
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
     <dimen name="nav_header_height">160dp</dimen>
     <dimen name="nav_body_dimen">65dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 
 
 </resources>
