--- a/MedicineGuru/app/src/main/res/layout/product_layout.xml
+++ b/MedicineGuru/app/src/main/res/layout/product_layout.xml
@@ -3,8 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingTop="10dp"
-    android:paddingBottom="10dp">
+    android:paddingBottom="10dp"
+    android:paddingTop="10dp">
 
     <ImageView
         android:id="@+id/image"
@@ -12,6 +12,7 @@
         android:layout_height="100dp"
         android:layout_above="@+id/pricingSection"
         android:layout_alignParentStart="true"
+        android:layout_margin="10dp"
         android:contentDescription="Property Image" />
 
     <LinearLayout
@@ -26,6 +27,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
+            android:layout_marginLeft="5dp"
             android:background="#ffffff"
             android:padding="10px"
             android:text="Product Title"
@@ -37,6 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
+            android:layout_marginLeft="5dp"
             android:text="Description"
             android:textSize="15sp" />
     </LinearLayout>
@@ -45,18 +48,51 @@
         android:id="@+id/pricingSection"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="2dp"
         android:layout_below="@+id/infoSection"
-        android:orientation="vertical">
+        android:layout_alignParentStart="true">
 
         <TextView
             android:id="@+id/price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
             android:background="#ffffff"
-            android:textColor="#ffffff"
             android:padding="5dp"
-            android:text="Price" />
+            android:text="Price"
+            android:textColor="#000000"
+            android:textSize="17dp" />
+
+        <Button
+            android:id="@+id/view"
+            android:layout_width="40dp"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/price"
+            android:layout_alignTop="@+id/price"
+            android:layout_marginStart="19dp"
+            android:layout_toEndOf="@+id/price"
+            android:background="#6FBBF7"
+            android:padding="2dp"
+            android:text="View"
+            android:textColor="#ffffff"
+            android:textSize="10dp" />
+
+        <Button
+            android:id="@+id/cart"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/view"
+            android:layout_alignTop="@+id/view"
+            android:layout_marginStart="17dp"
+            android:layout_toEndOf="@+id/view"
+            android:background="#f4a137"
+            android:padding="2dp"
+            android:text="Add to cart"
+            android:textColor="#ffffff"
+            android:textSize="10dp" />
 
     </RelativeLayout>
 
