--- a/MedicineGuru/app/src/main/res/values/colors.xml
+++ b/MedicineGuru/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#04b19d</color>
     <color name="colorPrimaryDark">#10c6c0</color>
     <color name="colorAccent">#5ce9ec</color>
+    <color name="default_indicator_color_selected">#eeee</color>
+    <color name="default_indicator_color_unselected">#66eeeeee</color>
+    <color name="toolbarColor">#eeee</color>
+    <color name="holo_gray">#717171</color>
 </resources>
