--- a/MedicineGuru/app/src/main/res/values/styles.xml
+++ b/MedicineGuru/app/src/main/res/values/styles.xml
@@ -36,5 +36,11 @@
         <item name="android:typeface">serif</item>
     </style>
 
+    <style name="CardView.SS" >
+        <item name="android:layout_marginRight">4dp</item>
+        <item name="android:layout_marginLeft">4dp</item>
+        <item name="cardElevation">2dp</item>
+        <item name="cardUseCompatPadding">true</item>
+    </style>
 </resources>
 
