--- a/MedicineGuru/app/src/main/res/menu/main.xml
+++ b/MedicineGuru/app/src/main/res/menu/main.xml
@@ -2,8 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:id="@+id/shopping_cart"
+        android:actionLayout="@layout/actionbar_cart_layout"
+        android:icon="@drawable/cart"
+        android:showAsAction="always">
+    </item>
 </menu>
