--- a/MedicineGuru/app/src/main/res/menu/activity_main_drawer.xml
+++ b/MedicineGuru/app/src/main/res/menu/activity_main_drawer.xml
@@ -16,9 +16,9 @@
             android:icon="@drawable/ic_menu_gallery"
             android:title="Products" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/insert_medicine"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+            android:title="Insert Medicine" />
         <item
             android:id="@+id/nav_manage"
             android:icon="@drawable/ic_menu_manage"
