--- a/MedicineGuru/app/src/main/res/layout/activity_insert_medicine.xml
+++ b/MedicineGuru/app/src/main/res/layout/activity_insert_medicine.xml
@@ -7,125 +7,176 @@
     android:orientation="vertical"
     tools:context="com.example.team2.medicineguru.InsertMedicine">
 
-    <TextView
-        style="@style/AppTheme.navText"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:text="@string/insert_medicine_title"
-        android:textSize="@dimen/title_font"
-        android:textStyle="italic" />
+        android:layout_height="wrap_content"
+        android:layout_weight="1">
 
-    <EditText
-        android:id="@+id/nameTxt"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:hint="@string/medicine_name"
-        android:inputType="textPersonName" />
-
-    <EditText
-        android:id="@+id/titletxt"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:hint="@string/medicine_title"
-        android:inputType="textPersonName"/>
-
-    <EditText
-        android:id="@+id/descriptionTxt"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:inputType="textPersonName"
-        android:hint="@string/medicine_description" />
-
-    <EditText
-        android:id="@+id/sizeTxt"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:inputType="number"
-        android:hint="@string/medicine_size" />
-
-    <Spinner
-        android:id="@+id/colorSpinner"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:entries="@string/medicine_color" />
-
-    <Spinner
-        android:id="@+id/formSpinner"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:entries="@string/medicine_form" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="horizontal">
-
-        <EditText
-            android:id="@+id/dosageAmountTxt"
-            android:layout_width="150dp"
-            android:layout_height="match_parent"
-            android:inputType="number"
-            android:hint="@string/medicine_dosage_quantity" />
-
-        <Spinner
-            android:id="@+id/unitSpinner"
-            android:layout_width="150dp"
-            android:layout_height="match_parent"
-            android:entries="@array/medicine_unit" />
-
-    </LinearLayout>
-
-    <EditText
-        android:id="@+id/symptomTxt"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:inputType="textPersonName"
-        android:hint="Symptom" />
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/med_img"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            app:srcCompat="@drawable/com_facebook_tooltip_blue_xout" />
-
-        <Button
-            android:id="@+id/btnChooseImg"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/choose_medicine_img"
-            android:onClick="chooseImage"/>
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/etPath"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:text="Path"
-            android:visibility="invisible" />
+            <TextView
+                android:id="@+id/textView"
+                style="@style/AppTheme.navText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="@string/insert_medicine_title"
+                android:textSize="@dimen/title_font"
+                android:textStyle="italic" />
 
-    </LinearLayout>
+            <EditText
+                android:id="@+id/nameTxt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="@string/medicine_name"
+                android:inputType="textPersonName" />
 
-    <Button
-        android:id="@+id/btnInsertMedicine"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:onClick="insertMedicineInDatabase"
-        android:text="@string/insert_medicine" />
+            <EditText
+                android:id="@+id/titletxt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="@string/medicine_title"
+                android:inputType="textPersonName" />
+
+            <EditText
+                android:id="@+id/descriptionTxt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="@string/medicine_description"
+                android:inputType="textPersonName" />
+
+            <EditText
+                android:id="@+id/sizeTxt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="@string/medicine_size"
+                android:inputType="number" />
+
+            <EditText
+                android:id="@+id/priceTxt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="@string/medicine_price"
+                android:inputType="number" />
+
+            <Spinner
+                android:id="@+id/prescriptionSpinner"
+                style="@style/FirebaseUI.CountrySpinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:entries="@array/require_prescription" />
+
+            <Spinner
+                android:id="@+id/colorSpinner"
+                style="@style/FirebaseUI.CountrySpinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:entries="@array/medicine_color" />
+
+            <Spinner
+                android:id="@+id/formSpinner"
+                style="@style/FirebaseUI.CountrySpinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:entries="@array/medicine_form" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="horizontal"
+                android:weightSum="1">
+
+                <EditText
+                    android:id="@+id/dosageAmountTxt"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.96"
+                    android:hint="@string/medicine_dosage_quantity"
+                    android:inputType="number" />
+
+                <Spinner
+                    android:id="@+id/unitSpinner"
+                    style="@style/FirebaseUI.CountrySpinner"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:entries="@array/medicine_unit" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <AutoCompleteTextView
+                    android:id="@+id/atSymptoms"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:hint="Symptom" />
+
+                <Button
+                    android:id="@+id/btnAdd"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:onClick="add_symptoms"
+                    android:text="ADD" />
+
+
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/symptomtxt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="horizontal"
+                android:weightSum="1">
+
+                <ImageView
+                    android:id="@+id/med_img"
+                    android:layout_width="30dp"
+                    android:layout_height="82dp"
+                    android:layout_weight="0.29"
+                    app:srcCompat="@drawable/com_facebook_tooltip_blue_xout" />
+
+                <Button
+                    android:id="@+id/btnChooseImg"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:onClick="chooseImage"
+                    android:text="@string/choose_medicine_img" />
+
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/btnInsertMedicine"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:onClick="insertMedicineInDatabase"
+                android:text="@string/insert_medicine" />
+        </LinearLayout>
+    </ScrollView>
+
+
 
 </LinearLayout>
