--- a/MedicineGuru/app/src/main/res/values/colors.xml
+++ b/MedicineGuru/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="default_indicator_color_unselected">#66eeeeee</color>
     <color name="toolbarColor">#eeee</color>
     <color name="holo_gray">#717171</color>
+    <color name="grey_ivory5">#717171</color>
+    grey_ivory5
 </resources>
