--- a/MedicineGuru/app/src/main/res/values/dimens.xml
+++ b/MedicineGuru/app/src/main/res/values/dimens.xml
@@ -12,6 +12,7 @@
     <dimen name="layout_margin_left">10dp</dimen>
     <dimen name="layout_margin_top">10dp</dimen>
     <dimen name="layout_margin_bottom">10dp</dimen>
+    <dimen name="badge_text_size">8pt</dimen>
     <dimen name="layout_margin_right">10dp</dimen>
     <dimen name="button_width">40dp</dimen>
     <dimen name="button_height">40dp</dimen>
