--- a/MedicineGuru/app/src/main/res/layout/nav_header_main.xml
+++ b/MedicineGuru/app/src/main/res/layout/nav_header_main.xml
@@ -5,7 +5,7 @@
     android:layout_height="@dimen/nav_header_height"
     android:background="@drawable/side_nav_bar"
     android:gravity="bottom"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -16,30 +16,17 @@
         android:id="@+id/imageView"
         android:layout_width="@dimen/nav_body_dimen"
         android:layout_height="@dimen/nav_body_dimen"
-        android:src="@drawable/nav"
-        android:adjustViewBounds="true"/>
+        android:layout_gravity="center_horizontal"
+        android:src="@mipmap/ic_person"/>
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/nav_header_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:text="Medicine Guru"
-            android:paddingLeft="@dimen/layout_margin_left"
-            android:paddingBottom="@dimen/layout_margin_bottom"
-            style="@style/AppTheme.navText"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:text="Medication at Doorsteps..."
-            android:paddingLeft="@dimen/layout_margin_left"
-            android:paddingBottom="@dimen/layout_margin_bottom"
-            style="@style/AppTheme.navSubText"/>
-    </LinearLayout>
+        android:layout_gravity="center_horizontal"
+        android:text="Medicine Guru"
+        android:paddingLeft="@dimen/layout_margin_left"
+        android:paddingBottom="@dimen/layout_margin_bottom"
+        style="@style/AppTheme.navText"/>
 
 </LinearLayout>
