--- a/MedicineGuru/app/src/main/res/values/colors.xml
+++ b/MedicineGuru/app/src/main/res/values/colors.xml
@@ -8,5 +8,8 @@
     <color name="toolbarColor">#eeee</color>
     <color name="holo_gray">#717171</color>
     <color name="grey_ivory5">#717171</color>
+    <color name="btn_color_blue">#6FBBF7</color>
+    <color name="btn_color_orange">#f4a137</color>
+    <color name="btn_txt_color">#FFFFFF</color>
     grey_ivory5
 </resources>
