--- a/MedicineGuru/app/src/main/res/layout/activity_insert_medicine.xml
+++ b/MedicineGuru/app/src/main/res/layout/activity_insert_medicine.xml
@@ -61,7 +61,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:hint="@string/medicine_size"
-                android:inputType="number" />
+                android:inputType="numberSigned" />
 
             <EditText
                 android:id="@+id/priceTxt"
